# mcai

./: .gitignore  .gitmodules  Cargo.toml  README.md  REQUIREMENTS.md
config/: default.toml  local.toml.example
llamacpp-sys/: Cargo.toml
src/: lib.rs  main.rs
src/chat/: chat.rs  command_handlers.rs  display.rs  mod.rs
src/config/: mod.rs
src/gguf/: gguf.rs  gguf_utils.rs  mod.rs  types.rs
src/inference/: engine.rs  inference.rs  mod.rs  model.rs  tokenizer.rs
src/inference/engine/: engine.rs
src/inference/model/: mod.rs  registry.rs  types.rs
src/inference/tokenizer/: gpt2.rs  mod.rs  strategy.rs  tokenizer.rs  utilities.rs
src/inference/tokenizer/strategies/: bert.rs  gpt2.rs  llama.rs  mod.rs  roberta.rs
src/llm/: mod.rs  ops.rs
src/llm/backend/: backend.rs  mod.rs
src/llm/backend/cpu/: cpu.rs  mod.rs
src/llm/engine/: engine.rs  mod.rs  names.rs
src/llm/inference/: attention.rs  forward.rs  mod.rs  tensors.rs  transformer.rs
src/llm/model/: dequantize.rs  mod.rs  model.rs  modelmetadata.rs  registry.rs  tensor_utils.rs  types.rs
src/llm/quants/: mod.rs  utils.rs
src/llm/quants/formats/: float32.rs  int16.rs  int8.rs  mod.rs  uint16.rs  uint8.rs
src/llm/quants/tests/: dequantize_tests.rs  mod.rs
src/llm/registry/: mod.rs  registry.rs  types.rs
src/llm/session/: context.rs  mod.rs
src/llm/tensor/: mod.rs  ops.rs  tensor.rs  utils.rs
src/llm/tokenizer/: mod.rs  tokenizer.rs  types.rs
src/model/: mod.rs
src/server/: mod.rs  routes.rs  server.rs  types.rs
tests/: lib.rs  mod.rs
tests/tokenizer/: gpt2.rs
(+18 files in other folders)
