[package]
name = "mcai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
byteorder = "1.4.3"
clap = { version = "4.5.29", features = ["derive"] }
comfy-table = "7.1.4"
config = "0.14"
reqwest = { version = "0.12.12", features = ["json"] }
rustyline = "15.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4.34", features = ["serde", "clock"] }
indicatif = "0.17.8"
ndarray = "0.16.1"
memmap2 = "0.9.5"
colored = "3.0.0"
once_cell = "1.21.0"
regex = "1.11.1"
rand = "0.9.0"
rayon = "1.10.0"
